--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -31,3 +31,6 @@ jobs:
 
             # build and run backend
             docker compose --env-file ./backend/.env up --build -d backend
+
+            # prune unused docker resources
+            docker system prune -f
