--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,6 @@
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "update-users-tenant": "node scripts/connectUsersToDefaultTenant.js"
+    "dev": "nodemon server.js"
   }
 }
