--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,9 +7,26 @@ on:
       - main
 
 jobs:
-  deploy-backend:
+  check-changes:
     runs-on: ubuntu-latest
-    if: contains(join(github.event.commits.*.message), 'deploy-backend') || contains(github.event.commits.*.modified, 'backend/') || contains(github.event.commits.*.added, 'backend/')
+    outputs:
+      backend: ${{ steps.filter.outputs.backend }}
+      frontend: ${{ steps.filter.outputs.frontend }}
+    steps:
+    - uses: actions/checkout@v2
+    - uses: dorny/paths-filter@v2
+      id: filter
+      with:
+        filters: |
+          backend:
+            - 'backend/**'
+          frontend:
+            - 'frontend/**'
+
+  deploy-backend:
+    needs: check-changes
+    if: ${{ needs.check-changes.outputs.backend == 'true' || contains(github.event.head_commit.message, 'deploy-backend') }}
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -22,20 +39,14 @@ jobs:
             key: ${{ secrets.SSH_PRIVATE_KEY }}
             script: |
                 cd /var/www/workout-tracker
-    
-                # Pull the latest changes from the repository
                 git pull origin main
-    
-                # build and run backend
                 docker compose --env-file ./backend/.env up --build -d backend
-    
-                # prune unused docker resources
                 docker system prune -f
 
   deploy-frontend:
+    needs: [check-changes, deploy-backend]
+    if: ${{ needs.check-changes.outputs.frontend == 'true' || contains(github.event.head_commit.message, 'deploy-frontend') }}
     runs-on: ubuntu-latest
-    needs: deploy-backend  # Optional: Ensure frontend runs after backend if both change
-    if: contains(join(github.event.commits.*.message), 'deploy-frontend') || contains(github.event.commits.*.modified, 'frontend/') || contains(github.event.commits.*.added, 'frontend/')
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -48,12 +59,6 @@ jobs:
             key: ${{ secrets.SSH_PRIVATE_KEY }}
             script: |
                 cd /var/www/workout-tracker
-
-                # Pull the latest changes from the repository
                 git pull origin main
-
-                # build and run frontend
                 docker compose --env-file ./backend/.env up --build -d frontend
-
-                # prune unused docker resources
                 docker system prune -f
