--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,16 +1,29 @@
+# Build stage
 FROM node:18-alpine AS build
 
 WORKDIR /app
-COPY package.json package-lock.json ./
-RUN npm install
 
-# Copy the entire project, including the public directory
+# Copy package.json and package-lock.json first to leverage Docker cache
+COPY package.json package-lock.json ./
+
+# Install dependencies
+RUN npm ci
+
+# Copy the rest of the application code
 COPY . .
 
+# Build the application
 RUN npm run build
 
+# Production stage
 FROM nginx:alpine
+
+# Copy built assets from build stage
 COPY --from=build /app/build /usr/share/nginx/html
+
+# Copy nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
+
 CMD ["nginx", "-g", "daemon off;"]
