--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
     "axios": "^1.7.7",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.12.7",
     "web-vitals": "^4.2.3"
   },
   "scripts": {
