--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.8.1",
     "recharts": "^2.12.7",
     "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^4.2.3"
